--- a/app/src/main/res/layout/historical_data_item.xml
+++ b/app/src/main/res/layout/historical_data_item.xml
@@ -21,7 +21,7 @@
             android:layout_margin="16dp"
             android:padding="16dp"
             tools:text="USD"
-            android:text="@{model.fromCurrencyName}"
+            android:text="@{model.fromCurrency.name}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,7 +33,7 @@
             android:layout_margin="16dp"
             android:padding="16dp"
             tools:text="USD"
-            android:text="@{model.toCurrencyName}"
+            android:text="@{model.toCurrency.name}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             tools:text="20"
-            android:text="@{model.fromCurrencyValue}"
+            android:text="@{model.fromCurrency.value}"
             android:padding="8dp"
             app:layout_constraintEnd_toEndOf="@+id/tv_from_currency"
             app:layout_constraintStart_toStartOf="@+id/tv_from_currency"
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             tools:text="30"
-            android:text="@{model.toCurrencyValue}"
+            android:text="@{String.valueOf(model.toCurrency.value)}"
             android:padding="8dp"
             app:layout_constraintEnd_toEndOf="@+id/tv_to_currency"
             app:layout_constraintStart_toStartOf="@+id/tv_to_currency"
